--- a/src/components/Home/homepage.scss
+++ b/src/components/Home/homepage.scss
@@ -2,26 +2,55 @@ html {
     font-size: 16px;
 }
 
+.header-top {
+    width: 100vw;
+    background:  transparent;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    height: 50px;
+    .header-title {
+        color: rgb(247, 247, 247);
+        border: 5px solid white;
+        width: 55px;
+    }
+}
+
 .banner {
     width: 100%;
     height: 500px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: linear-gradient(to left, rgba(115, 255, 0, 0.2), rgba(92, 4, 255, 0.3)), url("../../images/banner.jpeg");
+    background: linear-gradient(to right, rgba(29, 0, 133, 0.863), rgba(255, 238, 4, 0.26)), url("../../images/banner.jpeg");
     background-attachment: fixed;
     background-position: bottom;
     background-size: cover;
     opacity: 0.9;
+    &:before {
+        content: '';
+        position: absolute;
+        background: rgba(17, 18, 73, 0.418);
+        background-blend-mode:  color-burn;
+        width: 50%;
+        z-index: 10;
+        height: 500px;
+    }
 }
 
-.heading {
-    padding: .7rem 1.2rem;
-    width: 600px;
-    font-size: 5rem;
-    color: #fff; // background: -webkit-linear-gradient(0deg, #40E0D0, #FF8C00, #FF0080);
-    // -webkit-background-clip: text;
-    // -webkit-text-fill-color: transparent;
+.ui {
+    .column {
+        z-index: 11;
+        .heading {
+            padding: .7rem 1.2rem;
+            width: 600px;
+            font-size: 5rem;
+            color: #fff; // background: -webkit-linear-gradient(0deg, #40E0D0, #FF8C00, #FF0080);
+            // -webkit-background-clip: text;
+            // -webkit-text-fill-color: transparent;
+        }
+    }
 }
 
 .search-right {
@@ -38,11 +67,10 @@ html {
 .meetup-lists {
     overflow-y: scroll;
     height: 100vh;
-    -ms-overflow-style:none;
-    &::-webkit-scrollbar{
-        display:none;
-       }
-       
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
     .ui {
         .card {
             width: 100%;
