--- a/src/components/Meetups/meetup.scss
+++ b/src/components/Meetups/meetup.scss
@@ -1,11 +1,6 @@
-.search-bar {
-    position: fixed;
-    background: rgba($color: #fff, $alpha: 0.6);
-    z-index: 10;
-}
 
 .ui.items {
-    margin-top: 80px;
+    margin-top: 120px;
     .item {
         height: 180px;
     }
@@ -14,6 +9,38 @@
 .ui.divided.items>.item {
     overflow: hidden;
 }
+
 .ui.items>.item>.image+.content {
- padding-left: 1em; 
+    padding-left: 1em;
+}
+
+
+//GOOGLE MAP INFO WINDOW
+
+.gm-style .gm-style-iw {
+    background: none;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: 120px !important;
+    padding-top: 10px;
+    display: block !important;
+}
+
+.gm-style .gm-style-iw #google-popup p {
+    padding: 10px;
+}
+
+.gm-style div div div div div div div div {
+    background-color: rgba(255, 255, 255, .3) !important;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    color: rgb(132, 55, 255);
+    font-size: 16px;
+}
+
+.gm-style div div div div div div div div a {
+    color: #8200fcab;
+    font-weight: bold;
 }
