--- a/src/components/Home/homepage.scss
+++ b/src/components/Home/homepage.scss
@@ -4,7 +4,7 @@ html {
 
 .header-top {
     width: 100vw;
-    background:  transparent;
+    background: transparent;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -23,7 +23,7 @@ html {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: linear-gradient(to right, rgba(29, 0, 133, 0.863), rgba(255, 238, 4, 0.26)), url("../../images/banner.jpeg");
+    background: linear-gradient(to right, rgba(29, 0, 133, 0.863), rgba(255, 238, 4, 0.274)), url("../../images/banner.jpeg");
     background-attachment: fixed;
     background-position: bottom;
     background-size: cover;
@@ -31,8 +31,8 @@ html {
     &:before {
         content: '';
         position: absolute;
-        background: rgba(17, 18, 73, 0.418);
-        background-blend-mode:  color-burn;
+        background: inear-gradient(to right, rgba(17, 18, 73, 0.418), rgba(68, 71, 255, 0.418));
+        background-blend-mode: color-burn;
         width: 50%;
         z-index: 10;
         height: 500px;
@@ -50,6 +50,30 @@ html {
             // -webkit-background-clip: text;
             // -webkit-text-fill-color: transparent;
         }
+    }
+}
+
+.ui {
+    .card {
+        .card-btn {
+            color: rgb(252, 82, 119);
+            border: 2px solid rgb(252, 82, 119);
+            background: none;
+            margin-top: 2rem;
+            position: absolute;
+            bottom: 55px;
+            transition: all 0.3s ease;
+            &:hover {
+                background-color: rgb(252, 82, 119);
+                color: #fff;
+            }
+        }
+    }
+}
+
+.ui {
+    .event-lists {
+        margin: 2rem 0;
     }
 }
 
@@ -82,8 +106,10 @@ html {
 .footer {
     height: 100px;
     text-align: center;
-    border-top: 1px solid black;
-    h3 {
+    background: rgba(17, 18, 73, 0.418);
+    h4 {
+        font-size: 1rem;
         line-height: 100px;
+        color: #Fff;
     }
 }
