--- a/src/components/Meetups/meetup.scss
+++ b/src/components/Meetups/meetup.scss
@@ -1,8 +1,10 @@
-
 .ui.items {
-    margin-top: 120px;
+    margin-top: 100px;
     .item {
-        height: 180px;
+        height: 200px;
+        &:hover {
+            box-shadow: 5px 5px rgb(252, 82, 119);
+        }
     }
 }
 
@@ -14,17 +16,21 @@
     padding-left: 1em;
 }
 
-
 //GOOGLE MAP INFO WINDOW
-
 .gm-style .gm-style-iw {
     background: none;
     left: 0 !important;
-    width: 100% !important;
+    width: 150px !important;
     height: 100% !important;
     min-height: 120px !important;
     padding-top: 10px;
     display: block !important;
+    text-align: center;
+}
+
+.map-btn {
+    color: rgb(252, 82, 119);
+    padding: .3rem .5rem;
 }
 
 .gm-style .gm-style-iw #google-popup p {
